# xilem_synth_widgets

./: Cargo.toml  README.md
examples/: demo.rs  dsp.rs  gallery.rs
src/: lib.rs  theme.rs
src/views/: fader.rs  group_box.rs  knob.rs  led.rs  level_meter.rs  mod.rs  param_selector.rs  push_button.rs  scope.rs
src/widgets/: fader.rs  group_box.rs  knob.rs  led.rs  level_meter.rs  mod.rs  param_selector.rs  push_button.rs  scope.rs
